level 1 + level 2 + main hub working + basic MVP

--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,23 @@ Unity/Little_Princess/Logs/AssetImportWorker4-prev.log
 Unity/Little_Princess/Logs/AssetImportWorker5-prev.log
 Unity/Little_Princess/Logs/AssetImportWorker6-prev.log
 Unity/Little_Princess/Logs/shadercompiler-AssetImportWorker0.log
+Unity/Little_Princess/Library/ArtifactDB
+Unity/Little_Princess/Library/Bee/artifacts/mvdfrm/Unity.Plastic.Antlr3.Runtime.dll_DAEE26A352A5C26D.mvfrm
+Unity/Little_Princess/Library/Bee/artifacts/mvdfrm/Unity.Plastic.Newtonsoft.Json.dll_E05ADAFDFE50D978.mvfrm
+Unity/Little_Princess/Library/Bee/artifacts/mvdfrm/Unity.VisualScripting.Antlr3.Runtime.dll_1DFB949EC4EA8FF5.mvfrm
+Unity/Little_Princess/Library/Bee/artifacts/mvdfrm/Unity.VisualScripting.IonicZip.dll_A4EE95F47F845486.mvfrm
+Unity/Little_Princess/Library/Bee/artifacts/mvdfrm/Unity.VisualScripting.TextureAssets.dll_03AC971154EEDDCE.mvfrm
+Unity/Little_Princess/Library/Bee/artifacts/mvdfrm/Unity.VisualScripting.YamlDotNet.dll_6C8E6DBD94217FD6.mvfrm
+Unity/Little_Princess/Library/EditorInstance.json
+Unity/Little_Princess/Library/Search/transactions.db
+Unity/Little_Princess/Library/SourceAssetDB
+Unity/Little_Princess/Logs/AssetImportWorker0.log
+Unity/Little_Princess/Logs/shadercompiler-AssetImportWorker0.log
+Unity/Little_Princess/Logs/shadercompiler-UnityShaderCompiler.exe0.log
+Unity/Little_Princess/Temp/__Backupscenes/0.backup
+Unity/Little_Princess/Temp/ExportedBlenderFBXFile.fbx
+Unity/Little_Princess/Temp/FSTimeGet-7d5ee81982d1dd949b95079958df234c
+Unity/Little_Princess/Temp/FSTimeGet-ca0a85cbad24abe4eacc12747a251acb
+Unity/Little_Princess/Temp/UnityLockfile
+Unity/Little_Princess/Temp/workerlic
+Unity/Little_Princess/UserSettings/Layouts/CurrentMaximizeLayout.dwlt
